Updated index.html, Completed script.js and added some css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="./assets/location.png" width="80" height="80" loading="lazy">
                 <p>Grant Location Access</p>
                 <p>Allow Access to get weather information</p>
-                <button class="btn" data-grantAccess>Grant Access</button>
+                <button class="btn" type="submit" data-grantAccess>Grant Access</button>
             </div>
 
             <!-- search form -->
@@ -34,7 +34,7 @@
             </form>
 
             <!-- loading screen container -->
-            <div class="loading=container">
+            <div class="loading-container">
                 <img src="./assets/loading.gif" width="150" height="150" alt="">
                 <p>Loading</p>
             </div>
@@ -64,7 +64,7 @@
                     <!-- card 2 -->
                     <div class="parameter">
                         <img src="./assets/humidity.png" alt="">
-                        <p data-humidity></p>
+                        <p data-humidity>Humidity</p>
                     </div>
                     <!-- card 3 -->
                     <div class="parameter">
